--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-script": "^2.0.5",
     "react-scripts": "^2.1.3",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
@@ -46,7 +47,6 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-react-native": "^4.0.0",
-    "eslint-plugin-unused-imports": "^3.0.0"
+   
   }
 }
