--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-admin",
-  "version": "0.1.0",
+  "version": "18.2.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -9,14 +9,18 @@
     "@fullcalendar/daygrid": "^6.1.8",
     "@fullcalendar/list": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/x-charts": "^6.0.0-alpha.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
+    "react-router-dom": "^6.15.0",
     "react-script": "^2.0.5",
     "react-scripts": "^2.1.3",
     "styled-components": "^5.3.11",
@@ -45,8 +49,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-   
   }
 }
