--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["colour", "daygrid", "fullcalendar", "timegrid"]
+  "cSpell.words": [
+    "colour",
+    "daygrid",
+    "fullcalendar",
+    "Mthethwa",
+    "Siphesihle",
+    "timegrid"
+  ]
 }
